package com.directi.training.lsp.exercise_refactored;

public interface SwimQuack {
    void quack();
    void swim();
}
